--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<link rel="stylesheet" href="libs/slick-1.5.9/slick/slick.css" />
 	<link rel="stylesheet" href="libs/slick-1.5.9/slick/slick-theme.css" />
 	<link rel="stylesheet" href="css/fonts.css" />
-	<link rel="stylesheet" href="css/main.css?ver=1.2" />
-	<link rel="stylesheet" href="css/media.css?ver=1.2" />
+	<link rel="stylesheet" href="css/main.css?ver=1.4" />
+	<link rel="stylesheet" href="css/media.css?ver=1.4" />
 </head>
 <body>
 
@@ -220,7 +220,7 @@
 									<div class="item-tarif__oldprice"><span>159 000</span> руб.</div>
 									<div class="item-tarif__newprice"><span>99 000</span> руб.</div>
 								</div>
-								<a href="#" class="btn-main">Открыть кофейню</a>
+								<a href="#callback" class="btn-main fancybox">Открыть кофейню</a>
 							</div>
 						</div>
 					</div>
@@ -246,7 +246,7 @@
 									<div class="item-tarif__oldprice"><span>229 000</span> руб.</div>
 									<div class="item-tarif__newprice"><span>149 000</span> руб.</div>
 								</div>
-								<a href="#" class="btn-main">Открыть кофейню</a>
+								<a href="#callback" class="btn-main fancybox">Открыть кофейню</a>
 							</div>
 						</div>
 					</div>
@@ -514,7 +514,7 @@
 									<p><strong>Какая задача стояла:</strong> Учитывая ключевые сценарии поведения, понимание сути ресурсосберегающих технологий однозначно фиксирует необходимость экспериментов, поражающих по своей масштабности и грандиозности. </p>
 									<p><strong>Процесс реализации:</strong> Но базовые сценарии поведения пользователей лишь добавляют фракционных разногласий и обнародованы. </p>
 									<p><strong>Что сделано:</strong> Но базовые сценарии поведения пользователей лишь добавляют фракционных разногласий и обнародованы.</p>
-									<a href="#" class="btn-main">Хочу также</a>
+									<a href="#callback" class="btn-main fancybox">Хочу также</a>
 								</div>
 							</div>
 						</div>
@@ -533,7 +533,7 @@
 									<p><strong>Какая задача стояла:</strong> Учитывая ключевые сценарии поведения, понимание сути ресурсосберегающих технологий однозначно фиксирует необходимость экспериментов, поражающих по своей масштабности и грандиозности. </p>
 									<p><strong>Процесс реализации:</strong> Но базовые сценарии поведения пользователей лишь добавляют фракционных разногласий и обнародованы. </p>
 									<p><strong>Что сделано:</strong> Но базовые сценарии поведения пользователей лишь добавляют фракционных разногласий и обнародованы.</p>
-									<a href="#" class="btn-main">Хочу также</a>
+									<a href="#callback" class="btn-main fancybox">Хочу также</a>
 								</div>
 							</div>
 						</div>
@@ -552,7 +552,7 @@
 									<p><strong>Какая задача стояла:</strong> Учитывая ключевые сценарии поведения, понимание сути ресурсосберегающих технологий однозначно фиксирует необходимость экспериментов, поражающих по своей масштабности и грандиозности. </p>
 									<p><strong>Процесс реализации:</strong> Но базовые сценарии поведения пользователей лишь добавляют фракционных разногласий и обнародованы. </p>
 									<p><strong>Что сделано:</strong> Но базовые сценарии поведения пользователей лишь добавляют фракционных разногласий и обнародованы.</p>
-									<a href="#" class="btn-main">Хочу также</a>
+									<a href="#callback" class="btn-main fancybox">Хочу также</a>
 								</div>
 							</div>
 						</div>
@@ -899,7 +899,7 @@
 <script src="libs/scroll2id/PageScroll2id.min.js"></script>
 <script src="libs/mask/jquery.maskedinput.js"></script>
 <script src="libs/jQueryFormStyler-master/jquery.formstyler.min.js"></script>
-<script src="js/common.js?ver=1.2"></script>
+<script src="js/common.js?ver=1.4"></script>
 <!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter --> 
 <!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
