--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<link rel="stylesheet" href="libs/slick-1.5.9/slick/slick.css" />
 	<link rel="stylesheet" href="libs/slick-1.5.9/slick/slick-theme.css" />
 	<link rel="stylesheet" href="css/fonts.css" />
-	<link rel="stylesheet" href="css/main.css?ver=1.4" />
-	<link rel="stylesheet" href="css/media.css?ver=1.4" />
+	<link rel="stylesheet" href="css/main.css?ver=1.5" />
+	<link rel="stylesheet" href="css/media.css?ver=1.5" />
 </head>
 <body>
 
@@ -31,7 +31,7 @@
 				<div class="header__top">
 					<div class="logo-wrap">
 						<a href="#" class="logo">
-							<img src="img/logo.png" alt="alt">
+							<img src="img/logo.svg" alt="alt">
 						</a>
 						<div class="logo-descr">Кофейный консалтинг 24/7 в Москве и МО</div>
 					</div>
@@ -830,7 +830,7 @@
 				<div class="footer__top">
 					<div class="footer__left">
 						<a href="#" class="logo-footer">
-							<img src="img/logo2.png" alt="alt">
+							<img src="img/logo1.svg" alt="alt">
 						</a>
 						<a href="mailto:coffeebizmoscow@gmail.сom" class="mail-footer">coffeebizmoscow@gmail.сom</a>
 					</div>
@@ -899,7 +899,7 @@
 <script src="libs/scroll2id/PageScroll2id.min.js"></script>
 <script src="libs/mask/jquery.maskedinput.js"></script>
 <script src="libs/jQueryFormStyler-master/jquery.formstyler.min.js"></script>
-<script src="js/common.js?ver=1.4"></script>
+<script src="js/common.js?ver=1.5"></script>
 <!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter --> 
 <!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
